# fact8-temporal-graph

./: .gitignore  README.md  Untitled-1.ipynb  pipeline.job  pyproject.toml  setup.cfg
benchmarks/xgraph/: Readme.md  cppgckpt.sh  run.sh  subgraphx.py  subgraphx_tg_run.py  utils.py
benchmarks/xgraph/config/: config.yaml
dig/xgraph/dataset/: generate_simulate_dataset.py  test.py  tg_dataset.py  utils_dataset.py
dig/xgraph/evaluation/: metrics_tg.py  test.py
dig/xgraph/method/: att_explainer_tg.py  shapley.py  (+6 more)
examples/xgraph/: subgraphx_tg_results.py  value_results.py
notebooks/: data_processing.ipynb  num_states.tex  profile.txt  results_processing.ipynb  tgat_results_diff_tab.tex  tgat_results_og_tab.tex  tgat_results_tab.tex  tgat_rollout_tab.tex  tgat_runtime_single_tab.tex  tgat_runtime_tab.tex  tgat_time_tab.tex  tgn_results_diff_tab.tex  tgn_results_og_tab.tex  tgn_results_tab.tex  tgn_runtime_single_tab.tex  tgn_runtime_tab.tex  tgn_time_tab.tex  th20_results_processing.ipynb  threshold_results.ipynb
notebooks/results_mlp_navigator/: tgn_results_diff_tab.tex
notebooks/tables/: tgat_results_diff_tab.tex  tgat_results_og_tab.tex  tgat_results_tab.md  tgat_results_tab.tex  tgat_rollout_tab.tex  tgat_runtime_single_tab.tex  tgn_results_diff_tab.tex  tgn_results_og_tab.tex  tgn_results_tab.md  tgn_results_tab.tex  tgn_rollout_tab.tex  tgn_runtime_single_tab.tex
scripts/: download_and_process.sh  download_checkpoints.sh  install.sh  install_from_scratch.sh  make_env.job  pipeline.job  train_tgat.sh  train_tgn.sh  unpack.sh
tgnnexplainer/: __init__.py
(+62 files in other folders)
