[project]
readme = {content-type = "text/markdown", file = "README.md"}
name = "tgnnexplainer"
description = "T-GNNExplainer: Explaining Temporal Graph Models through an Explorer-Navigator Framework"
authors = [
    {name = "Wenwen Xia", email = "xiawenwen@sjtu.edu.cn"},
    {name = "Mincai Lai", email = "laimc@shanghaitech.edu.cn"},
    {name = "Caihua Shan", email = "caihuashan@microsoft.com"},
    {name = "Yao Zhang", email = "yaozhang@fudan.edu.cn"},
    {name = "Xinnan Dai", email = "daixn@shanghaitech.edu.cn"},
    {name = "Xiang Li", email = "xiangli@dase.ecnu.edu.cn"},
    {name="Dongsheng Li", email="donsheng.li@microsoft.com"},
]
maintainers = [
    {name = "Matey Krastev", email = "matey.krastev@student.uva.nl"},
    {name = "Kristiyan Hristov", email = "kristiyan.hristov@student.uva.nl"},
    {name = "Miklos Hamar", email="miklos.hamar@student.uva.nl"},
    {name = "David Beglou", email="david.beglou@student.uva.nl"}
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
version = "0.1.1-dev"

dependencies = [
    "scipy","shap", "IPython", "tqdm", "rdkit", "pandas", "sympy", "hydra-core", "torch", "matplotlib", "torch_geometric"
]

[tool.setuptools]
packages=["tgnnexplainer"]

